--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,51 @@
 .App {
   text-align: center;
 }
+div {
+  box-sizing: border-box;
+}
+.list {
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px dotted black;
+}
+.black-nav {
+  display: flex;
+  background: black;
+  width: 100%;
+  color: white;
+  padding-left: 20px;
+  justify-content: space-between;
+  padding-right: 20px;
+}
+.titleChangeBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid aqua;
+  border-radius: 1rem;
+  padding: 2px 10px 2px 10px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.titleChangeBtn span {
+  color: aqua;
+  font-weight: bold;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.post {
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #eee;
+  text-align: left;
+}
+
+.btnClicked {
+  color: gray !important;
+
+  text-decoration: line-through;
+}
 
 .App-logo {
   height: 40vmin;
